--- a/entreprise.html
+++ b/entreprise.html
@@ -15,8 +15,7 @@
 
     <header class="d-flex flex-wrap justify-content-center py-3 border-bottom sticky-top bg-white">
 
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <svg class="bi" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class=""><img class="img-fluid" src="images/logo.png" width="100px"></span>
       </a>
 
