--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header class="d-flex flex-wrap justify-content-center px-3 py-3 border-bottom">
 
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class=""><img class="img-fluid" src="images/logo.png" width="100px"></span>
       </a>
 
