--- a/ecolo.html
+++ b/ecolo.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header class="d-flex flex-wrap justify-content-center py-3 border-bottom sticky-top bg-white">
+    <header class="d-flex flex-wrap justify-content-center px-3 py-3 border-bottom sticky-top bg-white">
 
       <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class=""><img class="img-fluid" src="images/logo.png" width="100px"></span>
